# Friday-WeChat-Windows-AI-Butler

./: .env  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  TODOS.md  friday.spec  long-term-plan.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-lock.txt  requirements-python.txt  requirements.txt  run.py  setup.ps1
assets/: changelog.json
docs/: ARCHITECTURE.md  FRIDAY-DEV-MANUAL.md  IMPLEMENTATION-PLAN.md  INSTALL-LAYOUT.md  PLAN.md  RELEASE.md
extensions/: README.md
friday/: README.md  __init__.py  agent.py  agent_events.py  agent_tool_exec.py  api_connect.py  approval_descriptions.py  approval_narration.py  artifacts.py  auth.py  autostart.py  boot_timing.py  brain.py  bundled.py  category_profiles.py  changelog.py  checkpoint_writer.py  config.py  context.py  context_assembler.py  crash_handler.py  credentials_store.py  custom_endpoints.py  desktop.py  diagnostics_bundle.py  dream_task.py  edition.py  error_hints.py  fast_finish.py  goal_evidence.py  goal_verifier.py  health_check.py  history_index.py  image_gen.py  instance_lock.py  interaction_modes.py  io_utils.py  llm_profiles.py  logging_config.py  mcp_client.py  (+41 more)
installer/: README.md  friday.iss
release/: create-shortcut.ps1  创建桌面快捷方式.ps1  安装教程.txt  解除锁定.ps1  首次安装.ps1
scripts/: README.md  brand-agent-python.ps1  brand_agent_runner.py  build-installer.ps1  build.ps1  clean.ps1  configure-mimo.py  create_icon.py  create_shortcut.ps1  deploy-website.cmd  deploy-website.ps1  diagnose_api.py  ensure-github-network.ps1  friday-dist.ps1  install-friday-autostart.ps1  install-reasonix-bundle.ps1  install-ui-skills.ps1  installer-prepare.ps1  link-cursor-dev.ps1  make-release.ps1  pack-windows.cmd  pack-windows.ps1  prune_gitee_releases.py  publish-full-release.ps1  publish-github.ps1  (+25 more)
(+220 files in other folders)
