[project]
name = "friday"
version = "1.1.1"
description = "Windows AI desktop agent (星期五)"
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
# addopts 在 pytest.ini（Windows/CI 加载更稳定）；e2e 单独 pytest tests/e2e/
markers = [
    "e2e: UI end-to-end tests (requires playwright + chromium)",
]

[tool.coverage.run]
source = ["friday"]
# GUI 入口 / 定时调度仅手工或 e2e 覆盖，不计入单元测试覆盖率
omit = [
    "friday/desktop.py",
    "friday/splash.py",
    "friday/win32_chrome.py",
    "friday/single_instance.py",
    "friday/scheduler.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F841"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_ignores = true
ignore_missing_imports = true
check_untyped_defs = false
follow_imports = "skip"
